# CursorCodingEngine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: btengine-dev-constitution.mdc  codingengine-workflow.mdc  context-management.mdc  continuous-delivery-human-handoff.mdc  quality-standards.mdc  shared-memory-governance.mdc  sprint1-parallel-coordination.mdc
.cursor/skills/code-simplifier/: SKILL.md
.cursor/skills/codingengine/: SKILL.md
.cursor/skills/simplerig/: SKILL.md
docs/: README.md  plan_fusion_analysis.md  requirements_and_solutions.md  wiki_spec.md  文档索引.md  文档集规格.md  需求与解决方案.md
docs/wiki/: Architecture.md  CLI-Reference.md  Changelog.md  Concepts.md  Configuration.md  Evaluation.md  FAQ.md  Getting-Started.md  Glossary.md  Home.md  Installation.md  References.md  Rules.md  Skills.md  Troubleshooting.md  Workflow.md  使用教程.md  参考项目与引用.md  安装指南.md  工作流详解.md  常见问题.md  快速开始.md  术语表.md  核心概念.md  配置详解.md  首页.md
docs/wiki/code-simplifier/: Overview.md  Usage.md  使用指南.md  概览.md
docs/wiki/simplerig/: CLI-Reference.md  Config-Reference.md  Integration.md  Overview.md
simplerig/: config.yaml
simplerig/simplerig/: cli.py  config.py  git_ops.py  planner.py  runner.py  stages.py
src/codingengine/: __init__.py  bdd.py  cli.py  config.py  events.py  git_ops.py  lint_guard.py  planner.py  runner.py  stages.py  stats.py  tdd.py
